--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,6 +1,7 @@
+@import 'node_modules/modern-normalize/modern-normalize.css';
+
 @import './fonts.scss';
 @import './layouts.scss';
 @import './variables.scss';
 @import './common.scss';
 @import './text-elements.scss';
-
