--- a/src/assets/styles/layouts.scss
+++ b/src/assets/styles/layouts.scss
@@ -1,10 +1,12 @@
+@use "functions" as *;
+
 html {
   font-size: 16px;
 }
 
 body {
   font-family: var(--font-family--base);
-  font-size: 1.25rem;
+  font-size: linearClump(1.25, 1.125);
   background: var(--primary-background-color);
   color: var(--primary-text-color);
   display: flex;
@@ -12,12 +14,14 @@ body {
   min-height: 100vh;
   overflow-x: hidden;
 }
+
 #app {
   width: 100%;
   display: flex;
   flex-direction: column;
   position: relative;
 }
+
 .section {
   width: 100%;
   min-width: 100%;
@@ -43,5 +47,3 @@ body {
     padding-right: 1rem;
   }
 }
-
-
