--- a/src/assets/styles/text-elements.scss
+++ b/src/assets/styles/text-elements.scss
@@ -1,50 +1,42 @@
-.heading{
-  font-weight: 500;
-  font-family: var(--font-family--base);
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: uppercase;
+@use "functions" as *;
+
+.heading {
+  font-weight: 600;
+  line-height: 110%;
+  letter-spacing: -0.04em;
   margin: 0;
+  font-size: linearClump(1.5, 1.25);
 
-  &--l{
-    font-size: 2.875rem;
+  &--l {
+    font-weight: 500;
+    font-size: linearClump(2, 1.5);
+    letter-spacing: -0.03em;
 
-    @media screen and (max-width: 479px) {
-      font-size: 2rem;
-    }
-    @media screen and (max-width: 370px) {
-      font-size: 1.5rem;
-    }
   }
-  &--m{
-    font-size: 1.75rem;
-    text-transform: capitalize;
-    font-weight: 400;
-    @media screen and (max-width: 479px) {
-      font-size: 1.5rem;
-    }
-    @media screen and (max-width: 370px) {
-      font-size: 1.25rem;
-    }
+
+  &--xl {
+    font-weight: 700;
+    font-size: linearClump(3, 2);
+    letter-spacing: -0.06em;
+
   }
 }
-.paragraph{
-  font-family: var(--font-family--base);
-  letter-spacing: normal;
-  line-height: 1.25;
-  margin: 0;
-  font-weight: 300;
 
-  &--xl{
-    font-size: 1.375rem;
+.paragraph {
+  letter-spacing: -0.03em;
+  line-height: 150%;
+  font-weight: 500;
+  font-size: linearClump(1, 0.875);
+
+  &--l {
+    font-size: linearClump(1, 0.875);
+    font-weight: 600;
+    line-height: 100%;
   }
-  &--l{
-    font-size: 1.25rem;
-  }
-  &--m{
-    font-size: 1rem;
-  }
-  &--s{
-    font-size: 0.75rem;
+
+  &--xl {
+    font-size: linearClump(1.25, 1.125);
+    font-weight: 600;
+    line-height: 110%;
   }
 }
