create header component

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,28 +1,37 @@
-*, * > *{
+*,
+*>* {
   box-sizing: border-box;
-  }
-  * {
-		&::-webkit-scrollbar {
-			width: 0;
-		}
-		scrollbar-width: none;
 }
 
-  a {
-    color: inherit;
-    text-decoration: inherit;
+* {
+  &::-webkit-scrollbar {
+    width: 0;
   }
 
-  button{
-    &:not([disabled]){
-      cursor: pointer;
-    }
+  scrollbar-width: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+button {
+  &:not([disabled]) {
+    cursor: pointer;
   }
 
-  img{
-    max-width: 100%;
+  &.button--transparent {
+    background: transparent;
+    border: none;
+    padding: 0;
   }
+}
 
-  .svg{
-    width: 100%;
-  }
+img {
+  max-width: 100%;
+}
+
+.svg {
+  width: 100%;
+}
