--- a/src/assets/styles/layouts.scss
+++ b/src/assets/styles/layouts.scss
@@ -7,16 +7,19 @@ html {
 body {
   font-family: var(--font-family--base);
   font-size: linearClump(1.25, 1.125);
-  background: var(--primary-background-color);
-  color: var(--primary-text-color);
+  background: var(--color-background-gradient-1);
+  color: var(--color-text--1);
   display: flex;
   min-width: 320px;
   min-height: 100vh;
   overflow-x: hidden;
+  background-color: lightblue;
 }
 
 #app {
   width: 100%;
+  height: 100vh;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -27,23 +30,4 @@ body {
   min-width: 100%;
   overflow: hidden;
   position: relative;
-}
-
-.container {
-  width: 100%;
-  max-width: 84.625rem;
-  margin: 0 auto;
-  padding: 0 2rem;
-  position: relative;
-  z-index: 1;
-
-  @media screen and (max-width: 991px) {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  @media screen and (max-width: 767px) {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
 }
