--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -9,6 +9,16 @@
   }
 
   scrollbar-width: none;
+
+  &:focus-visible {
+    box-shadow:
+      0 0 0 1px var(--palette--1),
+      0 0 0 2px var(--palette--2),
+      0 0 2px 3px var(--palette--1) !important;
+    outline: 2px transparent solid !important;
+    outline-offset: 4px;
+    z-index: 1;
+  }
 }
 
 a {
