--- a/src/assets/styles/text-elements.scss
+++ b/src/assets/styles/text-elements.scss
@@ -27,6 +27,7 @@
   line-height: 150%;
   font-weight: 500;
   font-size: linearClump(1, 0.875);
+  margin: 0;
 
   &--l {
     font-size: linearClump(1, 0.875);
