add all statuses of buttons

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -29,6 +29,7 @@
   --palette--19: #f9e7e780;
   --palette--20: #E2E9FA;
   --palette--21: #e3eafa80;
+  --palette--22: #043BCA;
 
   // main theme for the whole project
   --color-text--1: var(--palette--1);
