add login form component

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -7,6 +7,7 @@
 
   --border-radius--1: 0.5rem;
   --border-radius--2: 0.75rem;
+  --border-radius--3: 100vmax;
 
   --palette--1: #2F2E2E;
   --palette--2: #FFFFFF;
@@ -30,6 +31,7 @@
   --palette--20: #E2E9FA;
   --palette--21: #e3eafa80;
   --palette--22: #043BCA;
+  --palette--23: #D9D9D9;
 
   // main theme for the whole project
   --color-text--1: var(--palette--1);
@@ -51,4 +53,8 @@
   --color-text-hover--button: var(--palette--8);
   --color-background-hover--button: var(--palette--14);
   --color-border-hover--button: var(--palette--14);
+
+  // Statuses
+  --color-text-success: var(--palette--6);
+  --color-text-error: var(--palette--10);
 }
