--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -1,6 +1,8 @@
 @font-face {
   font-family: 'Geist';
-  src: local('Geist'), url('/fonts/Geist-VariableFont_wght.ttf') format('truetype');
+  src:
+    local('Geist'),
+    url('/fonts/Geist-VariableFont_wght.ttf') format('truetype');
   font-weight: 100 900;
   font-style: normal;
 }
