--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --font-family--base: "Geist", "Roboto", "Arial", "Helvetica", sans-serif;
+  --font-family--base: 'Geist', 'Roboto', 'Arial', 'Helvetica', sans-serif;
 
   --transition-duration: 0.3s;
   --transition-timing-function: ease;
@@ -9,29 +9,29 @@
   --border-radius--2: 0.75rem;
   --border-radius--3: 100vmax;
 
-  --palette--1: #2F2E2E;
-  --palette--2: #FFFFFF;
-  --palette--3: #E9E9E9;
-  --palette--4: #E8EFFF;
-  --palette--5: #1657FF;
-  --palette--6: #27AE60;
-  --palette--7: #FFAB36;
+  --palette--1: #2f2e2e;
+  --palette--2: #ffffff;
+  --palette--3: #e9e9e9;
+  --palette--4: #e8efff;
+  --palette--5: #1657ff;
+  --palette--6: #27ae60;
+  --palette--7: #ffab36;
   --palette--8: #999999;
-  --palette--9: #FAE7E7;
-  --palette--10: #FA4040;
-  --palette--11: #94B2E4;
-  --palette--12: #F2EFF6;
-  --palette--13: #F9F9F9;
-  --palette--14: #EFEFEF;
-  --palette--15: #E4F1E9;
-  --palette--16: #4E80FD;
-  --palette--17: #FDC270;
-  --palette--18: #F9E7E7;
+  --palette--9: #fae7e7;
+  --palette--10: #fa4040;
+  --palette--11: #94b2e4;
+  --palette--12: #f2eff6;
+  --palette--13: #f9f9f9;
+  --palette--14: #efefef;
+  --palette--15: #e4f1e9;
+  --palette--16: #4e80fd;
+  --palette--17: #fdc270;
+  --palette--18: #f9e7e7;
   --palette--19: #f9e7e780;
-  --palette--20: #E2E9FA;
+  --palette--20: #e2e9fa;
   --palette--21: #e3eafa80;
-  --palette--22: #043BCA;
-  --palette--23: #D9D9D9;
+  --palette--22: #043bca;
+  --palette--23: #d9d9d9;
 
   // main theme for the whole project
   --color-text--1: var(--palette--1);
