add login-page layout

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -8,6 +8,7 @@
   --border-radius--1: 0.5rem;
   --border-radius--2: 0.75rem;
   --border-radius--3: 100vmax;
+  --border-radius--4: 1.25rem;
 
   --palette--1: #2f2e2e;
   --palette--2: #ffffff;
