--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,5 +1,5 @@
 *,
-* > * {
+*>* {
   box-sizing: border-box;
 }
 
@@ -19,6 +19,18 @@
     outline-offset: 4px;
     z-index: 1;
   }
+}
+
+.visually-hidden {
+  position: absolute !important;
+  margin: -1px !important;
+  padding: 0 !important;
+  border: 0 !important;
+  white-space: nowrap !important;
+  block-size: 1px !important;
+  clip: rect(0, 0, 0, 0) !important;
+  inline-size: 1px !important;
+  overflow: hidden !important;
 }
 
 a {
