add login page layout

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -58,4 +58,8 @@
   // Statuses
   --color-text-success: var(--palette--6);
   --color-text-error: var(--palette--10);
+
+  // Scrollbar
+  --scrollbar-background-color: transparent;
+  --scrollbar-thumb-color: var(--palette--23);
 }
