add styles and layout for the  event card component

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -30,7 +30,7 @@
   --palette--18: #f9e7e7;
   --palette--19: #f9e7e780;
   --palette--20: #e2e9fa;
-  --palette--21: #e3eafa80;
+  --palette--21: #C4C4C4;
   --palette--22: #043bca;
   --palette--23: #d9d9d9;
 
