--- a/src/assets/styles/layouts.scss
+++ b/src/assets/styles/layouts.scss
@@ -6,7 +6,7 @@ html {
 
 body {
   font-family: var(--font-family--base);
-  font-size: linearClump(1.25, 1.125);
+  font-size: linearClamp(1.25, 1.125);
   background: var(--color-background-gradient-1);
   color: var(--color-text--1);
   display: flex;
