--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -11,6 +11,28 @@ a,
 button {
   color: inherit;
   text-decoration: inherit;
+
+}
+
+a {
+  // font-weight: 700;
+  transition: var(--transition-default);
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+.description {
+  a {
+    color: var(--palette--5);
+  }
+}
+
+.notes__inner-content {
+  a {
+    text-decoration: underline;
+  }
 }
 
 button {
